--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -78,6 +78,12 @@ $typography: (
     font-weight: 400,
     line-height: 1rem,
   ),
+  body-2xs: (
+    font-family: var(--pdz-font-regular),
+    font-size: 0.7rem,
+    font-weight: 400,
+    line-height: 0.9rem,
+  ),
   label-xs: (
     font-family: var(--pdz-font-regular),
     font-size: 0.65rem,
