--- a/src/app/tools/replay_analyzer/replay.component.html
+++ b/src/app/tools/replay_analyzer/replay.component.html
@@ -22,33 +22,33 @@
   </div>
   <!-- <loading *ngIf="analyzed && !replayData"></loading> -->
   <mat-card *ngIf="replayData" class="w-[90%] p-2">
-    <mat-card-title class="flex flex-wrap gap-4 justify-center items-center p-2 text-lg">
-      <div class="flex space-x-1">
+    <div class="flex flex-row overflow-x-auto gap-6 justify-center items-center p-3 text-lg w-full no-scrollbar">
+      <span class="flex space-x-1 whitespace-nowrap">
         <label class="font-semibold text-symbolColor-sub" for="format">
           Format:
         </label>
         <span id="format">{{ replayData.gametype }}</span>
-      </div>
-      <div class="flex space-x-1">
+      </span>
+      <span class="flex space-x-1 whitespace-nowrap">
         <label class="font-semibold text-symbolColor-sub" for="gen">
           Generation:
         </label>
         <span id="gen"> {{ replayData.genNum }} </span>
-      </div>
-      <div class="flex space-x-1">
+      </span>
+      <span class="flex space-x-1 whitespace-nowrap">
         <label class="font-semibold text-symbolColor-sub" for="turns">
           Turns:
         </label>
         <span id="turns"> {{ replayData.turns }} </span>
-      </div>
-      <div class="flex space-x-1">
+      </span>
+      <span class="flex space-x-1 whitespace-nowrap">
         <label class="font-semibold text-symbolColor-sub" for="gameTime">
           Game Time:
         </label>
-        <span id="gameTime">{{ toMinutes(replayData.gameTime) }} minutes
-          {{ remainingSeconds(replayData.gameTime) }} seconds</span>
-      </div>
-    </mat-card-title>
+        <span id="gameTime">{{ toMinutes(replayData.gameTime) }}m
+          {{ remainingSeconds(replayData.gameTime) }}s</span>
+      </span>
+    </div>
     <mat-card-content
       class="flex flex-col items-center p-2 border-2 max-w-full w-full bg-menu-100 rounded-xl border-menu-400">
       <div class="space-y-8 w-full max-w-full pt-3">
@@ -129,27 +129,38 @@
                         [disabled]="mon.fainted"></pdz-sprite>
                     </mat-card-title>
                   </mat-card-header>
-                  <mat-card-content class="!flex flex-col gap-1">
-                    <div class="p-2 text-center">
-                      <span class="font-semibold block mb-1"> Kills: </span>
-                      <mat-expansion-panel disabled hideToggle>
-                        <!-- Prevent greyed out text while the mat-expansion-panel is disabled -->
-                        <mat-expansion-panel-header class="!text-[var(--mat-expansion-header-text-color)]">
-                          <mat-panel-title>
-                            {{ mon.kills[0] }}
-                            <span *ngIf="mon.kills[1]" class="ml-1">
-                              ({{ mon.kills[1] }} indirect)
-                            </span>
-                          </mat-panel-title>
-                        </mat-expansion-panel-header>
-                      </mat-expansion-panel>
+                  <mat-card-content class="!flex flex-col gap-1 !mr-0">
+                    <div class="grid grid-cols-2 gap-2">
+                      <div class="p-2 text-center">
+                        <span class="font-semibold block mb-1"> Kills: </span>
+                        <mat-expansion-panel disabled hideToggle class="pdz-centered-panel">
+                          <!-- Disable greyed out text on disabled expansion panel -->
+                          <mat-expansion-panel-header class="!text-[var(--mat-expansion-header-text-color)]">
+                            <mat-panel-title class="!mr-0 !flex !justify-center !w-full">
+                              <span>
+                                {{ mon.kills[0] + (mon.kills[1] || 0) }}
+                              </span>
+                            </mat-panel-title>
+                          </mat-expansion-panel-header>
+                        </mat-expansion-panel>
+                      </div>
+                      <div class="p-2 text-center">
+                        <span class="font-semibold block mb-1"> Deaths: </span>
+                        <mat-expansion-panel disabled hideToggle class="pdz-centered-panel">
+                          <mat-expansion-panel-header class="!text-[var(--mat-expansion-header-text-color)] !mr-0">
+                            <mat-panel-title class="!mr-0 !flex !justify-center !w-full">
+                              {{ mon.fainted ? 1 : 0 }}
+                            </mat-panel-title>
+                          </mat-expansion-panel-header>
+                        </mat-expansion-panel>
+                      </div>
                     </div>
-                    <div class="p-2 text-center">
-                      <span class="font-semibold block mb-1"> Damage Dealt:</span>
+                    <div class="p-2">
+                      <span class="font-semibold block mb-1 text-center"> Damage Dealt:</span>
                       <mat-accordion>
-                        <mat-expansion-panel>
+                        <mat-expansion-panel class="pdz-left-aligned-panel">
                           <mat-expansion-panel-header>
-                            <mat-panel-title>
+                            <mat-panel-title class="!flex !justify-start !w-full !mr-0 !text-left">
                               {{
                               mon.damageDealt[0] + (mon.damageDealt[1] || 0)
                               | number: "1.0-0"
@@ -167,12 +178,12 @@
                         </mat-expansion-panel>
                       </mat-accordion>
                     </div>
-                    <div class="p-2 text-center">
-                      <span class="font-semibold block mb-1"> Damage Taken: </span>
+                    <div class="p-2">
+                      <span class="font-semibold block mb-1 text-center"> Damage Taken: </span>
                       <mat-accordion>
-                        <mat-expansion-panel>
+                        <mat-expansion-panel class="pdz-left-aligned-panel">
                           <mat-expansion-panel-header>
-                            <mat-panel-title>
+                            <mat-panel-title class="!flex !justify-start !w-full !mr-0 !text-left">
                               {{
                               mon.damageTaken[0] + (mon.damageTaken[1] || 0)
                               | number: "1.0-0"
@@ -241,8 +252,4 @@
       </div>
     </mat-card-content>
   </mat-card>
-
-  <div *ngIf="replayData" class="flex justify-center w-full p-2">
-    <div class="flex flex-col items-center p-2 border-2 max-w-full w-fit bg-menu-100 rounded-xl border-menu-400"></div>
-  </div>
 </div>
