--- a/src/app/tools/replay_analyzer/replay.component.html
+++ b/src/app/tools/replay_analyzer/replay.component.html
@@ -22,26 +22,26 @@
   </div>
   <!-- <loading *ngIf="analyzed && !replayData"></loading> -->
   <mat-card *ngIf="replayData" class="w-[90%] p-2">
-    <div class="flex flex-row overflow-x-auto gap-6 justify-center items-center p-3 text-lg w-full no-scrollbar">
-      <span class="flex space-x-1 whitespace-nowrap">
+    <div class="flex flex-row overflow-x-auto gap-6 md:justify-center items-center p-3 text-lg w-full no-scrollbar">
+      <span class="flex space-x-1 whitespace-nowrap md:mx-16">
         <label class="font-semibold text-symbolColor-sub" for="format">
           Format:
         </label>
         <span id="format">{{ replayData.gametype }}</span>
       </span>
-      <span class="flex space-x-1 whitespace-nowrap">
+      <span class="flex space-x-1 whitespace-nowrap md:mx-16">
         <label class="font-semibold text-symbolColor-sub" for="gen">
           Generation:
         </label>
         <span id="gen"> {{ replayData.genNum }} </span>
       </span>
-      <span class="flex space-x-1 whitespace-nowrap">
+      <span class="flex space-x-1 whitespace-nowrap md:mx-16">
         <label class="font-semibold text-symbolColor-sub" for="turns">
           Turns:
         </label>
         <span id="turns"> {{ replayData.turns }} </span>
       </span>
-      <span class="flex space-x-1 whitespace-nowrap">
+      <span class="flex space-x-1 whitespace-nowrap md:mx-16">
         <label class="font-semibold text-symbolColor-sub" for="gameTime">
           Game Time:
         </label>
@@ -133,8 +133,10 @@
                     <div class="grid grid-cols-2 gap-2">
                       <div class="p-2 text-center">
                         <span class="font-semibold block mb-1"> Kills: </span>
-                        <mat-expansion-panel disabled hideToggle class="pdz-centered-panel">
-                          <!-- Disable greyed out text on disabled expansion panel -->
+                        <!-- Tooltip for direct and indirect kills - shows up only when indirect > 0 -->
+                        <mat-expansion-panel disabled hideToggle class="pdz-centered-panel cursor-help"
+                          [matTooltip]="mon.kills[1] ? mon.kills[0] + ' direct, ' + mon.kills[1] + ' indirect' : ''">
+                          <!-- Class prevents greyed out text on disabled expansion panel -->
                           <mat-expansion-panel-header class="!text-[var(--mat-expansion-header-text-color)]">
                             <mat-panel-title class="!mr-0 !flex !justify-center !w-full">
                               <span>
