restore old classes

--- a/src/app/tools/replay_analyzer/replay.component.html
+++ b/src/app/tools/replay_analyzer/replay.component.html
@@ -15,7 +15,7 @@
     </button>
     }
   </div>
-  <div>
+  <div class="max-w-full p-2 font-bold text-center rounded-full bg-caution w-fit">
     The replay analyzer is currently still in testing. If you find errors,
     please share the replay on our
     <a href="https://discord.gg/sQUEBW4UVx" target="_blank" class="text-blue-500">Discord</a>.
