improve tier list

--- a/src/app/league-zone/divisions/division-dashboard/division-dashboard.component.html
+++ b/src/app/league-zone/divisions/division-dashboard/division-dashboard.component.html
@@ -20,11 +20,7 @@
   <button class="navigation-tabs__tab" routerLink="./standings" type="button">
     Standings
   </button>
-  <button
-    class="navigation-tabs__tab"
-    routerLink="../../tier-list"
-    type="button"
-  >
+  <button class="navigation-tabs__tab" routerLink="./tier-list" type="button">
     Tier List
   </button>
   <button class="navigation-tabs__tab" routerLink="./draft" type="button">
